# gecodert

./: CMakeLists.txt  README
cmake-support/: FindGecode.cmake
examples/: magic-square.cpp  money.cpp  queens.cpp  sudoku.cpp  sudoku_gecodert.cpp  test.cpp  test2.cpp  testBool.cpp  testInt.cpp  testSet.cpp  zebra.cpp
gecodert/: gecodert.cpp  gecodert.hh  int.hh  set.hh  utils.hh
gecodert/exceptions/: exceptions.cpp  exceptions.hh
gecodert/int/: distinct.cpp  distinct.hh  dom.cpp  dom.hh  linear.cpp  linear.hh  rel.cpp  rel.hh
utils/: Generate.sh  README  emacs-format-file  input  parser.py  props.sh  props_cpp.sh  props_functions_cpp.sh  props_hh.sh  prueba.hh  replace.py
